Remove unused imports and exceptions from ClientServiceTest